--- a/MyBudget/App.xaml
+++ b/MyBudget/App.xaml
@@ -12,6 +12,7 @@
             <conv:PriceToPLNConverter x:Key="pricePLNConverter"/>
             <conv:ColorConverter x:Key="colorConverter"/>
             <conv:RowToIndexConverter x:Key="rowToIndexConverter"/>
+            <conv:DateTimeConverter x:Key="dateTimeConverter"/>
             <ResourceDictionary.MergedDictionaries>
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
