--- a/MyBudget/MainWindow.xaml
+++ b/MyBudget/MainWindow.xaml
@@ -4,9 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyBudget"
+        xmlns:View="clr-namespace:MyBudget.View"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <View:ExpenseAllView/>
+
     </Grid>
 </Window>
