--- a/MyBudget/MainWindow.xaml
+++ b/MyBudget/MainWindow.xaml
@@ -5,10 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyBudget"
         xmlns:View="clr-namespace:MyBudget.View"
+        xmlns:ViewModel="clr-namespace:MyBudget.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <local:MainWindowViewModel/>
+    </Window.DataContext>
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type ViewModel:ExpenseAllViewModel}">
+            <View:ExpenseAllView/>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
-        <View:ExpenseAllView/>
-
+        <ContentControl Content="{Binding CurrentViewModel}"/>
     </Grid>
 </Window>
