--- a/MyBudget/View/ExpenseAllView.xaml
+++ b/MyBudget/View/ExpenseAllView.xaml
@@ -19,7 +19,7 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
     </UserControl.Resources>
-        <TabControl Name="tabControlTop" SelectedIndex="{Binding TabControlTopSelectedIndex}" SelectedItem="{Binding SelectedTabParent, Mode=OneWayToSource}" Background="LightGray">
+        <TabControl Name="tabControlTop" SelectedIndex="{Binding TabControlSelectedIndex}" SelectedItem="{Binding SelectedTabParent, Mode=OneWayToSource}" Background="LightGray">
             <TabControl.Resources>
                 <Style TargetType="TabItem">
                     <Setter Property="Template">
@@ -177,7 +177,7 @@
 
                     </Grid>
                     <StackPanel Grid.Row="4" Margin="20,10">
-                        <Button Content="EDIT" Command="{Binding EditExpenseCommand}" CommandParameter="{Binding}"/>
+                        <Button Content="EDIT" Command="{Binding EditCommand}" CommandParameter="{Binding}"/>
                         <Button Content="Charts" Command="{Binding OpenNewWindowCommand}" CommandParameter="TEST"/>
                     </StackPanel>
                 </Grid>
